--- a/frontend/src/components/MessageBox.css
+++ b/frontend/src/components/MessageBox.css
@@ -14,10 +14,10 @@
     width: auto;
     border-radius: 10px;
     font-size: 14pt;
-    background-color: #a04000;
+    background-color: #c436c7;
     border-style: none;
 }
 
 .MessageBox button:hover {
-    background-color: #6e2c00;
+    background-color: #8c148f;
 }
