--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -1,9 +1,9 @@
 .Header {
     width: 100%;
     height: 50px;
-    background-color: #a04000;
+    background-color: #c436c7;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
 }
 
 .Header ul {
@@ -20,7 +20,7 @@
 }
 
 .Header li:hover {
-    background-color: #6e2c00;
+    background-color: #8c148f;
 }
 
 @media (max-width: 426px) {
