--- a/frontend/src/components/Product.css
+++ b/frontend/src/components/Product.css
@@ -26,11 +26,11 @@
     height: 50px;
     width: 200px;
     border-style: none;
-    background-color: #a04000;
+    background-color: #c436c7;
     border-radius: 10px;
     font-size: 16pt;
 }
 
 .Product .buy:hover {
-    background-color: #6e2c00;
+    background-color: #8c148f;
 }
