--- a/frontend/src/views/Main.css
+++ b/frontend/src/views/Main.css
@@ -1,25 +1,25 @@
 .Main {
     padding-top: 30px;
+    height: calc(100vh - 100px);
 }
 
 .Main .addProduct {
     height: 50px;
     width: 200px;
     border-style: none;
-    background-color: #a04000;
+    background-color: #c436c7;
     border-radius: 10px;
     font-size: 16pt;
 }
 
 .Main .addProduct:hover {
-    background-color: #6e2c00;
+    background-color: #8c148f;
 }
 
 .Main .mainGrid {
     width: 100%;
     padding: 30px;
     row-gap: 30px;
-    min-height: calc(100vh - 50px - 50px);
     background-color: #ffffff;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -27,7 +27,7 @@
 
 @media (max-width: 768px) {
     .Main .mainGrid {
-        min-height: calc(100vh - 160px - 50px);
+        height: 100%;
         padding: 10px;
         grid-template-columns: repeat(2, 1fr);
     }
